# Substrate

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.session.md  CLAUDE.md  CLAUDE.session.md  Dockerfile  GEMINI.md  HANDOFF.md  Makefile  README.md  SECURITY.md  START.md  bootstrap.ps1  bootstrap.sh  codex.md  docker-compose.observability.yml  docker-compose.yml  go.bat  pyproject.toml  scaffold.config.json  start.py  test.sh
.claude/: settings.json
.codex/: README.md  policies.md  system_prompt_addition.md
.gemini/: system_prompt_addition.md
.github/: CODEOWNERS  pull_request_template.md
.governance/: packet-schema.json  schema-registry.json  session-brief.json  terminal-log.jsonl  wbs.json  wbs_cli.py  wbs_common.py  wbs_server.py
app/: .gitignore  README.md
docs/: CRITICAL_APP_EXECUTION_CHECKLIST.md  DESIGNING_WBS.md  PLAYBOOK.md  TEAM_PATTERNS.md  adr-claude-agent-detection-deferred.md  architecture.md  claude-code-guide.md  ecosystem-fit.md  error-codes.md  extensibility-adr.md  governance-workflow-codex.md  logging.md  plan-mode-guide.md  release-checklist-codex.md  session-brief.md  skills-contract.md  skills-roadmap.md  substrate-template-summary.md  template-usage.md  toolchain.md  wbs-template-profiles.md
prompts/: QUICKSTART.md  kickoff-lead.md  kickoff-teammate.md
reports/: ai-substrate-eval.json  context-efficiency-report.json  dod-audit-export.csv  dod-audit-export.json  dod-e2e-report.json  nfr-baseline.json  phase5-ai-backend-dod.json  phase5-analytics-dod.json  phase5-analytics-perf.json  phase5-frontend-dod.json  (+10 more)
(+994 files in other folders)
